# omenrgb

./: Cargo.toml  Makefile  readme.rst
.github/workflows/: release.yml
src/: animation.rs  cli.rs  color.rs  constants.rs  driver.rs  main.rs  presets.rs  status.rs  utils.rs  zone.rs
