[package]
name = "omenrgb"
version = "0.1.0"
edition = "2024"
description = "Control HP Omen 4 zone RGB keyboard"
repository = "https://github.com/ms-jagadeeshan/omenrgb"
license = "MIT"


[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
rand = "0.8"

[profile.release]
lto = true
codegen-units = 1
strip = true
